--- a/docs/security/observability.mdx
+++ b/docs/security/observability.mdx
@@ -1,11 +1,11 @@
 ---
-title: Activity tracking events for Qiskit Runtime Service
-description: 
+title: Activity tracking events for Qiskit Runtime
+description: Learn about activity tracking events for Qiskit Runtime. 
 ---
 
-# Activity tracking events for Qiskit Runtime Service
+# Activity tracking events for Qiskit Runtime
 
-IBM Cloud&reg; services, such as Qiskit Runtime Service, generate activity tracking events.
+IBM Cloud&reg; services, such as Qiskit Runtime, generate activity tracking events.
 
 Activity tracking events report on activities that change the state of a service in IBM Cloud. You can use the events to investigate abnormal activity and critical actions and to comply with regulatory audit requirements.
 
@@ -15,12 +15,12 @@ You can use IBM Cloud Logs to visualize and alert on events that are generated i
 
 ## Locations where activity tracking events are generated
 
-Qiskit Runtime Service sends activity tracking events in the following regions:
+Qiskit Runtime sends activity tracking events in the following regions:
 
 - Washington (`us-east`)
 - Frankfurt (`eu-de`)
 
-## Viewing activity tracking events for Qiskit Runtime Service
+## Viewing activity tracking events for Qiskit Runtime
 
 You can use IBM Cloud Logs to visualize and alert on events that are generated in your account and routed by IBM Cloud Activity Tracker Event Routing to an IBM Cloud Logs instance.
 
@@ -28,106 +28,13 @@ You can use IBM Cloud Logs to visualize and alert on events that are generated i
 
 For information on launching the IBM Cloud Logs UI, see [Launching the UI in the IBM Cloud Logs](https://test.cloud.ibm.com/docs/cloud-logs?topic=cloud-logs-instance-launch) documentation.
 
-
-## List of platform events
-
-<!-- This section only applies to catalog services and can be deleted if the service is not a catalog service. -->
-
-The following table lists the activity tracking event actions that the {{site.data.keyword.cloud_notm}} platform generates when Qiskit Runtime Service instances are processed.
-
-| Action                                   | Description |
-|------------------------------------------|---------|
-| `<service-name>.instance.create`           | An event is generated when you provision a service instance. |
-| `<service-name>.instance.update`           | An event is generated when you rename a service instance or when you change the service plan. |
-| `<service-name>.instance.delete`           | An event is generated when a service instance is deleted. |
-| `<service-name>.instance.schedule_reclaim` | An event is generated when a service instance is pending_reclamation. |
-| `<service-name>.instance.restore`          | An event is generated when a service instance is restored. |
-{: caption="Actions that generate platform events" caption-side="bottom"}
-
-The following table lists the actions that generate an event for managing service credentials that are associated with a service instance.
-
-| Action                         | Description |
-|--------------------------------|---------|
-| `<service_name>.key.create` | An event is generated when an API key is created for a service instance through the *Service credentials* section of the service instance UI. |
-| `<service_name>.key.delete` | An event is generated when an API key that is associated with a service instance is deleted from the *Service credentials* section of the service instance UI. |
-{: caption="Actions that generate service credentials events" caption-side="bottom"}
-
-
-## List of management events
-{: #at_actions}
-
-<!-- Make sure you introduce the table with a detailed description that immediately precedes it.  -->
-
-| Action             | Description      |
-|--------------------|------------------|
-|                    |                  |
-{: caption="Actions that generate management events" caption-side="bottom"}
-
 ## List of data events
-{: #at_actions_data}
 
-<!-- Make sure you introduce the table with a detailed description that immediately precedes it.  -->
-
-| Action                           | Description                        |
-|----------------------------------|------------------------------------|
-|                                  |                                    |
-{: caption="Actions that generate data events" caption-side="bottom"}
-
-
-<!-- OPTION 2 -->
-
-<!-- If you have multiple events that might not be related, you can create different sections to group them. -->
-
-## Events for component X
-{: #at_actions_x}
-
-<!-- Make sure you introduce the table with a detailed description that immediately precedes it.  -->
+The following table lists the actions that generate Qiskit Runtime and data events.
 
 | Action                           | Description                        |
 |----------------------------------|------------------------------------|
 |                                  |                                    |
-{: caption="Lists of management events" caption-side="bottom"}
-{: #componentX-table-1}
-{: tab-title="Management events"}
-{: tab-group="componentX"}
-{: class="simple-tab-table"}
-{: row-headers}
-
-| Action                           | Description                        |
-|----------------------------------|------------------------------------|
-|                                  |                                    |
-{: caption="Lists of data events" caption-side="bottom"}
-{: #componentX-table-2}
-{: tab-title="Data events"}
-{: tab-group="componentX"}
-{: class="simple-tab-table"}
-{: row-headers}
-
-## Events for component Y
-{: #at_actions_x}
-
-<!-- Make sure you introduce the table with a detailed description that immediately precedes it.  -->
-
-| Action                           | Description                        |
-|----------------------------------|------------------------------------|
-|                                  |                                    |
-{: caption="Lists of management events" caption-side="bottom"}
-{: #componentY-table-1}
-{: tab-title="Management events"}
-{: tab-group="componentY"}
-{: class="simple-tab-table"}
-{: row-headers}
-
-| Action                           | Description                        |
-|----------------------------------|------------------------------------|
-|                                  |                                    |
-{: caption="Lists of data events" caption-side="bottom"}
-{: #componentY-table-2}
-{: tab-title="Data events"}
-{: tab-group="componentY"}
-{: class="simple-tab-table"}
-{: row-headers}
-
 
 ## Analyzing Qiskit Runtime Service activity tracking events
 {: #at_events_iam_analyze}
