--- a/docs/security/observability.mdx
+++ b/docs/security/observability.mdx
@@ -30,13 +30,8 @@ For information on launching the IBM Cloud Logs UI, see [Launching the UI in the
 
 ## List of data events
 
-The following table lists the actions that generate Qiskit Runtime and data events.
+The following table lists the actions that generate Qiskit Runtime data events.
 
 | Action                           | Description                        |
 |----------------------------------|------------------------------------|
 |                                  |                                    |
-
-## Analyzing Qiskit Runtime Service activity tracking events
-{: #at_events_iam_analyze}
-
-<!-- Provide information about the events in your service that add additional information in requestData and responseData. See the IAM Events topic for a sample topic that includes this section: /docs/activity-tracker?topic=activity-tracker-at_events_iam#at_events_iam_analyze.  -->
