--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -307,6 +307,16 @@
    "source": [
     "## Basis gates\n",
     "\n",
+    "<Admonition type=\"danger\" title='Removal of pulse support'>\n",
+    "\n",
+    " Pulse-level control on __all__ IBM Quantum&reg; processors has been removed and this tutorial will __not work correctly__ using these QPUs.\n",
+    "\n",
+    " If you were using pulse schedules to execute single and two-qubit rotations, use the new [fractional gates](/docs/guides/fractional-gates) feature. Alternatively, if you would like to simulate pulse schedules for you work, check out the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package.\n",
+    "\n",
+    "Additionally, the `qiskit.pulse` module has been **removed** as of the Qiskit SDK v2.0.0 (but is still supported under the Qiskit SDK v1.4 until September of 2025). See the [pulse migration guide](../migration-guides/pulse-migration) for more information.\n",
+    "\n",
+    "</Admonition>\n",
+    "\n",
     "Every quantum computer supports a limited instruction set, called its _basis gates_.  Every gate in the circuit must be translated to the elements of this set. This set should consist of single- and two-qubit gates that provide a universal gates set, meaning that any quantum operation can be decomposed into those gates.  This is done by the [BasisTranslator](../api/qiskit/qiskit.transpiler.passes.BasisTranslator), and the basis gates can be specified as a keyword argument to the transpiler to provide this information."
    ]
   },
