--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4339deb5-4947-493b-8940-e68c91311631",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
     "ghz.cx(0, range(1, 5))\n",
     "\n",
     "\n",
-    "# Use fake pulse-enabled backend\n",
+    "# Use fake backend\n",
     "backend = FakeWashingtonV2()\n",
     "\n",
     "# Run with optimization level 3 and 'asap' scheduling pass\n",
