--- a/docs/guides/monitor-job.ipynb
+++ b/docs/guides/monitor-job.ipynb
@@ -9,6 +9,18 @@
     "\n",
     "View a list of your workloads on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
     "\n",
+    "## View job status\n",
+    "\n",
+    "Go to your [Workloads table](https://quantum.cloud.ibm.com/workloads) and check under the Status column for whether a job has completed or failed.\n",
+    "\n",
+    "## View remaining usage\n",
+    "\n",
+    "Go to your [Instances table](https://quantum.cloud.ibm.com/instances) and select the tab associated with the plan you want to view remaining usage for. Total time used and total time remaining on your plan is displayed.\n",
+    "\n",
+    "## View metrics on number of jobs and workloads submitted\n",
+    "\n",
+    "Go to the [Analytics page](https://quantum.cloud.ibm.com/analytics) to see the total number of jobs submitted, as well as a count of batch workloads and session workloads. Note that you can only see the Analytics page for accounts that you own or manage.\n",
+    "\n",
     "## Monitor a job\n",
     "\n",
     "Use the job instance to check the job status or retrieve the results by calling the appropriate command:\n",
@@ -307,7 +319,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Try the [Grover's algorithm](/docs/tutorials/grovers-algorithm) tutorial.\n",
-    "    - [Migrate from qiskit_ibm_provider](/docs/migration-guides/qiskit-runtime-from-ibm-provider)\n",
+    "    - [Migrate from qiskit_ibm_provider](/docs/migration-guides/qiskit-runtime-from-ibm-provider).\n",
     "</Admonition>"
    ]
   }
