Typos in Variational algorithm design course

--- a/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
+++ b/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "241a5b4d-b5cf-41c9-a8d2-4ebf65b47a5e",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
    ],
    "source": [
     "experimental_min_eigenvalue_ref = cost_func_vqe(\n",
-    "    result.x, raw_ansatz, observable_1, estimator\n",
+    "    ref_result.x, ref_ansatz, observable_1, estimator\n",
     ")\n",
     "print(experimental_min_eigenvalue_ref)"
    ]
