change system to QPU where appropriate

--- a/docs/tutorials/combine-error-mitigation-techniques.ipynb
+++ b/docs/tutorials/combine-error-mitigation-techniques.ipynb
@@ -573,7 +573,7 @@
   }
  ],
  "metadata": {
-  "description": "Combine error mitigation options for utility-scale experiments using 100Q+ IBM Quantum systems and the Qiskit Runtime Estimator primitive.",
+  "description": "Combine error mitigation options for utility-scale experiments using 100Q+ IBM Quantum QPUs and the Qiskit Runtime Estimator primitive.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
