--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "As someone working in quantum chemistry, you probably already have your favorite software for modeling molecules, which can generate a Hamiltonian that describes your system of interest. Here, we will use code built solely on PySCF, numpy, and Qiskit. But the process of Hamiltonian preparation transfers to prepackaged solutions as well. The only difference between this approach and other software will be minor syntax differences; some of these are addressed in the \"Third-party software\" subsection to facilitate integration of existing workflows.\n",
     "\n",
-    "Generating a quantum chemistry Hamiltonian for use on IBM Quantum&reg; systems involves the following steps:\n",
+    "Generating a quantum chemistry Hamiltonian for use on IBM Quantum&reg; QPUs involves the following steps:\n",
     "\n",
     "1. Define your molecule (geometry, spin, active space, and so on)\n",
     "2. Generate the fermionic Hamiltonian (creation and annihilation operators)\n",
@@ -291,7 +291,7 @@
    "id": "928d72cf-212f-4f85-9d81-a7ffb33d6db8",
    "metadata": {},
    "source": [
-    "These Hamiltonians are currently fermionic (creation and annihilation) operators, applicable to systems of (indistinguishable) fermions, and correspondingly subject to antisymmetry under exchange. This results in different statics than would apply to a distinguishable or bosonic system. To run calculations on IBM Quantum Systems, we require a bosonic operator describing the energy. The result of such a mapping is conventionally written in terms of Pauli operators, since they are both Hermitian and unitary. There are several mappings one can use. One of the simplest is the Jordan Wigner transformation.\n",
+    "These Hamiltonians are currently fermionic (creation and annihilation) operators, applicable to systems of (indistinguishable) fermions, and correspondingly subject to antisymmetry under exchange. This results in different statics than would apply to a distinguishable or bosonic system. To run calculations on IBM Quantum QPUs, we require a bosonic operator describing the energy. The result of such a mapping is conventionally written in terms of Pauli operators, since they are both Hermitian and unitary. There are several mappings one can use. One of the simplest is the Jordan Wigner transformation.\n",
     "\n",
     "3. Mapping the Hamiltonian\n",
     "\n",
