--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -371,7 +371,7 @@
   }
  ],
  "metadata": {
-  "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
+  "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and QPUs to solve real-world problems.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
