fix IBM possessives

--- a/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-computing-fundamentals.mdx
@@ -154,7 +154,7 @@ True or false: Quantum circuits are not physical devices.
 
 </summary>
 
-True. A quantum circuit is an abstract representation of a set of instructions that make up a quantum algorithm. We can use a visual tool like IBM’s Quantum Composer or a programming language like Qiskit to construct quantum circuits..
+True. A quantum circuit is an abstract representation of a set of instructions that make up a quantum algorithm. We can use a visual tool like the IBM [Composer](https://quantum.cloud.ibm.com/composer) or a programming language like [Qiskit](/docs/guides) to construct quantum circuits.
 
 </details>
 
