--- a/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/variational-quantum-algorithms.ipynb
@@ -178,7 +178,7 @@
    "id": "9607ab51",
    "metadata": {},
    "source": [
-    "If we want to estimate the expectation value of an operator (like $Z$), we should use estimator. If we want to look at the states of the system, we use sampler."
+    "If we want to estimate the expectation value of an operator (like $Z$), we should use Estimator. If we want to look at the states of the system, we use Sampler."
    ]
   },
   {
@@ -650,7 +650,7 @@
    "id": "f1d86563",
    "metadata": {},
    "source": [
-    "If we want to estimate the expectation value of an operator (like $Z \\otimes Z$), we would use estimator. If we want to look at the states of the system, we use sampler."
+    "If we want to estimate the expectation value of an operator (like $Z \\otimes Z$), we would use Estimator. If we want to look at the states of the system, we use Sampler."
    ]
   },
   {
