Add missing info

--- a/docs/guides/custom-roles.mdx
+++ b/docs/guides/custom-roles.mdx
@@ -44,7 +44,8 @@ This custom role grants quantum-specific roles to users.
 
 6. In the Service dropdown menu, choose Qiskit Runtime. A table appears that contains all the actions that you can map to the role.
 
-7. For this example, look for any actions that pertain to analytics, such as "Read usage filters for analytics" and "Read usage for analytics". To add the actions to your custom role, click Add at the end of the action's row.
+7. For this example, look for any actions that pertain to analytics, such as "Read usage filters for analytics" and "Read usage for analytics". Also include the "Read account configuration" action.
+To add the actions to your custom role, click Add at the end of the action's row.
 
 8. Once you have added all the actions you want mapped to the role, click Create.
 
