update - the utility paper replication part
added a tutorial link

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -8,7 +8,8 @@
     "# Simulating nature\n",
     "\n",
     "Video link\n",
-    "Link to tutorial https://quantum.cloud.ibm.com/docs/en/tutorials/probabilistic-error-amplification"
+    "\n",
+    "Link to tutorial https://quantum.cloud.ibm.com/docs/tutorials/probabilistic-error-amplification"
    ]
   },
   {
@@ -128,7 +129,7 @@
     "\n",
     "Here $N$ is the number of non-commuting terms $H_j$ in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment.\n",
     "\n",
-    "See the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/en/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details."
+    "See the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details."
    ]
   },
   {
@@ -165,6 +166,12 @@
    "source": [
     "## Replicating the \"Utility\" paper\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "\n",
+    "This part is a high-level walk-through of [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification) tutorial, which replicates the result of the [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3) paper. We strongly suggest you open target tutorial along with this session.\n",
+    "\n",
+    "</Admonition>\n",
+    "\n",
     "We will now examine a concrete example from a highly influential paper published by IBM a few years ago, titled [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3), often referred to as the \"Utility paper\".\n",
     "\n",
     "![The cover art of the article we call the utility paper, published in the journal Nature.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/utility.svg)\n",
@@ -173,19 +180,22 @@
     "\n",
     "This study was particularly significant because it demonstrated that quantum computers can be used to verify or compare results with approximate classical simulation methods, such as tensor network algorithms—especially in scenarios where the exact solution is unknown beforehand.\n",
     "\n",
-    "Another remarkable aspect of this work is that it has been widely reproduced: researchers and users now have the ability to replicate and verify the experiment using IBM’s cloud-accessible quantum systems and the Qiskit software framework. In the following, we will guide you through the steps to perform this replication yourself.\n",
+    "Another remarkable aspect of this work is that it has been widely reproduced: researchers and users now have the ability to replicate and verify the experiment using IBM’s cloud-accessible quantum systems and the Qiskit software framework. In the following, we will guide you through the steps to perform this replication yourself by reviewing [IBM's tutorial](/docs/tutorials/probabilistic-error-amplification) step by step.\n",
     "\n",
-    "For this example, we will dive deeper into the specific steps required to translate the problem into inputs that a quantum device can process. Here, we focus on simulating the dynamics of the total magnetization in a system of magnetic dipole spins arranged on a lattice, subjected to an external magnetic field. This system can be described by an Ising model with a transverse magnetic field. We represent it using a parametrized quantum circuit, where the parameters correspond to the tunable values of the spin-spin (ZZ) interactions and the strength of the external, transverse magnetic field ($B_x$, parametrized using X).\n",
+    "\n",
+    "In this tutorial, we dive deeper into the specific steps required to translate the problem into inputs that a quantum device can process. We focused on simulating the dynamics of the total magnetization in a system of magnetic dipole spins arranged on a lattice, subjected to an external magnetic field. This system can be described by an Ising model with a transverse magnetic field. We represent it using a parametrized quantum circuit, where the parameters correspond to the tunable values of the spin-spin ($ZZ$) interactions and the strength of the external, transverse magnetic field ($B_x$, parametrized using $X$).\n",
     "\n",
     "![Spins on a lattice that point either up or down.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/spins-lattice.svg)\n",
     "\n",
-    "Since this series is titled Quantum Computing in Practice, we will also cover the experimental techniques used to improve the quality of the results. One important procedure involves identifying and removing \"bad\" qubits—those with low gate fidelities or short decoherence times—that could significantly impact the experiment’s outcome. Such problematic qubits may arise from poor calibration or interactions with two-level systems (TLS). Removing these qubits alters the hardware’s native topology, effectively changing the lattice on which the system is simulated.\n",
+    "Since this series is titled Quantum Computing in Practice, we will cover additional details of the experimental techniques used to improve the quality of the results. One important procedure involves identifying and removing \"bad\" qubits—those with low gate fidelities or short decoherence times—that could significantly impact the experiment's outcome. Such problematic qubits may arise from poor calibration or interactions with two-level systems (TLS). Removing these qubits alters the hardware's native topology, effectively changing the lattice on which the system is simulated.\n",
     "\n",
-    "Additionally, we will discuss how to construct the parametrized quantum circuit that implements the system’s time-evolution using trotterization. A key part of this process is identifying entangling layers within the circuit, which play a crucial role in the main error mitigation technique we will introduce later.\n",
+    "Additionally, we will discuss how to construct the parametrized quantum circuit that implements the system’s time-evolution using trotterization. A key part of this process is identifying entangling layers within the circuit, which play a crucial role in the main error mitigation technique.\n",
+    "\n",
     "\n",
     "### Qiskit patterns step 1: Mapping\n",
     "\n",
-    "The tutorial accomplishes the mapping step very much in line with the general approach described above. Specific to this problem, the tutorial\n",
+    "\n",
+    "[The tutorial](/docs/tutorials/probabilistic-error-amplification#step-1-map-classical-inputs-to-a-quantum-problem) accomplishes the mapping step very much in line with the general approach described above. Specific to this problem, the tutorial\n",
     "\n",
     "* Creates a parameterized Ising model circuit\n",
     "* Creates entangling layers and removes bad qubits\n",
@@ -199,7 +209,7 @@
     "- Construct the entangling layer\n",
     "- Define the trotterized circuit\n",
     "\n",
-    "Let us explore topics related to these functions a bit more."
+    "Here, let us explore topics related to these functions a bit more."
    ]
   },
   {
@@ -264,12 +274,12 @@
     "\n",
     "### Qiskit patterns step 2: optimize\n",
     "\n",
-    "Now that we have generated our circuit, the next step is to optimize it. The first part of this process involves defining a pass manager. In the context of the Qiskit SDK, transpilation is the process of transforming an input circuit into a form that is suitable for execution on a quantum device. This transformation happens through a sequence of steps known as transpiler passes.\n",
+    "Now that we have generated our circuit, [the next step](/docs/tutorials/probabilistic-error-amplification#step-2-optimize-problem-for-quantum-hardware-execution) is to optimize it. The first part of this process involves defining a pass manager. In the context of the Qiskit SDK, transpilation is the process of transforming an input circuit into a form that is suitable for execution on a quantum device. This transformation happens through a sequence of steps known as transpiler passes.\n",
     "A pass manager is an object that holds a list of these transpiler passes and can apply them to a circuit. To create one, you initialize a PassManager with the desired list of transpiler passes. Ultimately, the pass manager produces an ISA circuit—a circuit expressed in terms of the backend’s Instruction Set Architecture (ISA). This means the circuit is represented using gates that are native to the backend hardware, although it does not yet include the timing information required to run the circuit on the device.\n",
     "\n",
     "### Qiskit patterns step 3: execute using primitives\n",
     "\n",
-    "We will use the Estimator as our primary tool for this experiment because our goal is to measure the total magnetization of the system. The Estimator is specifically designed to estimate the expectation values of observables, making it the ideal choice here.\n",
+    "Now, it is time to [run our circuit](/docs/tutorials/probabilistic-error-amplification#step-3-execute-using-qiskit-primitives). We will use the Estimator as our primary tool for this experiment because our goal is to measure the total magnetization of the system. The Estimator is specifically designed to estimate the expectation values of observables, making it the ideal choice here.\n",
     "At this stage, it is also essential to configure our error mitigation settings. We will apply Zero Noise Extrapolation (ZNE) to improve the accuracy of our results. In the tutorial, you will see that we specify two or more noise factor values at which to evaluate the extrapolated models, and we select “Probabilistic Error Amplification” (PEA) as our amplification method. PEA is preferred for this experiment because it scales significantly better than other options, which is crucial when working with systems of 100 or more qubits.\n",
     "\n",
     "This is all that is required to run the experiment.\n",
@@ -319,7 +329,7 @@
     "\n",
     "### Qiskit patterns step 4: post-processing\n",
     "\n",
-    "The dotted gray line in the plotted data represents the results obtained using approximate classical methods, with the approximation error reduced to a low threshold. The raw data points for the various noise factors, selected at the outset, are clearly offset from this dotted line. In contrast, the solid blue line displays the data after applying our Zero-Noise Extrapolation (ZNE) processing, which noticeably brings the results much closer to the exact values.\n",
+    "Once the experiment is finished, you are ready to view your result by [post-processing](/docs/tutorials/probabilistic-error-amplification#step-4-post-process-and-return-result-in-desired-classical-format) it. The dotted gray line in the plotted data represents the results obtained using approximate classical methods, with the approximation error reduced to a low threshold. The raw data points for the various noise factors, selected at the outset, are clearly offset from this dotted line. In contrast, the solid blue line displays the data after applying our Zero-Noise Extrapolation (ZNE) processing, which noticeably brings the results much closer to the exact values.\n",
     "In summary, the values obtained under normal noise conditions (noise factor nf=1.0nf=1.0) show significant deviation from the exact results. Meanwhile, the mitigated values align closely with the exact ones, demonstrating the effectiveness of the Phase Estimation Algorithm (PEA)-based noise mitigation technique.\n",
     "\n",
     "![A plot of exact solutions, unmitigated solutions, and mitigated solutions to the problem solved in the utility paper.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/data.svg)\n",
@@ -327,6 +337,7 @@
     "## Summary\n",
     "\n",
     "To quickly summarize what we have learned:\n",
+    "\n",
     "* Quantum simulation is one of the most promising application areas in the short  to mid term.\n",
     "* It has wide-ranging applications, from pharmaceuticals to high-energy physics, materials science, and more.\n",
     "* The Utility paper from IBM, published in 2023 pointed the way towards being able to use quantum computers for scientific discovery  and we worked through the associated tutorial that goes along with that paper.\n",
@@ -353,7 +364,14 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Simulating nature"
+  "title": "Simulating nature",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
